<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.activity.product.AddProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:paddingTop="30dp"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtb"
            app:title="Add Product"
            android:paddingTop="4dp"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_24"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_code_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:inputType="number"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:id="@+id/productCodeTIET"
                android:layout_width="match_parent"
                android:hint="@string/product_code_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:inputType="text"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:id="@+id/productNameTIET"
                android:layout_width="match_parent"
                android:hint="@string/product_name_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_category_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:clickable="false"
                android:focusable="false"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:layout_width="match_parent"
                android:drawableTint="@color/orange"
                android:id="@+id/productCategoryTIET"
                android:hint="@string/product_category_hint"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_sell_price_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:inputType="numberDecimal"
                android:textColor="@color/orange"
                android:layout_width="match_parent"
                android:id="@+id/productSellPriceTIET"
                android:hint="@string/product_sell_price_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <com.google.android.material.button.MaterialButton
                app:cornerRadius="5dp"
                android:textSize="17sp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/chooseImageMBt"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange"
                android:text="@string/choose_product_image"/>

            <ImageView
                android:id="@+id/chosenIV"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:layout_width="match_parent"
                android:background="@color/gains_boro"
                android:src="@drawable/ic_image_24_grey"
                android:contentDescription="@string/text" />

            <com.google.android.material.button.MaterialButton
                android:alpha="0.5"
                app:cornerRadius="5dp"
                android:textSize="17sp"
                android:enabled="false"
                android:id="@+id/saveMBt"
                android:text="@string/save"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>