<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.activity.expense.EditExpenseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:paddingTop="30dp"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtb"
            app:title="Edit Expense"
            android:paddingTop="4dp"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_24"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_name_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:inputType="text"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:id="@+id/expenseNameTIET"
                android:layout_width="match_parent"
                android:hint="@string/expense_name_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_amount_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:inputType="numberDecimal"
                android:textColor="@color/orange"
                android:layout_width="match_parent"
                android:id="@+id/expenseAmountTIET"
                android:hint="@string/expense_amount_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_date_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:clickable="false"
                android:focusable="false"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:id="@+id/expenseDateTIET"
                android:layout_width="match_parent"
                android:drawableTint="@color/orange"
                android:hint="@string/expense_date_hint"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_time_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:clickable="false"
                android:focusable="false"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:id="@+id/expenseTimeTIET"
                android:layout_width="match_parent"
                android:drawableTint="@color/orange"
                android:hint="@string/expense_time_hint"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_note_optional"/>

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="top"
                android:padding="15dp"
                android:textSize="16sp"
                android:inputType="text"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:id="@+id/expenseNoteTIET"
                android:layout_width="match_parent"
                android:hint="@string/expense_note_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <com.google.android.material.button.MaterialButton
                app:cornerRadius="5dp"
                android:textSize="17sp"
                android:id="@+id/saveMBt"
                android:text="@string/save"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>