<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.activity.customer.EditCustomerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:paddingTop="30dp"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtb"
            android:paddingTop="4dp"
            app:title="Edit Customer"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_24"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="16sp"
                android:inputType="text"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/orange"
                android:id="@+id/customerNameTIET"
                android:layout_width="match_parent"
                android:hint="@string/customer_name_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_required"/>

            <com.google.android.material.textfield.TextInputLayout
                app:hintEnabled="false"
                android:layout_marginTop="5dp"
                android:id="@+id/phoneNumberTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:layout_height="55dp"
                    android:textColor="@color/orange"
                    android:id="@+id/phoneNumberTIET"
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number_hint"
                    android:background="@drawable/bg_radius_5_stroke_2_orange"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_optional"/>

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="top"
                android:padding="15dp"
                android:textSize="16sp"
                android:inputType="text"
                android:layout_height="200dp"
                android:id="@+id/addressTIET"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:layout_width="match_parent"
                android:hint="@string/address_hint"
                android:background="@drawable/bg_radius_5_stroke_2_orange"/>

            <com.google.android.material.button.MaterialButton
                app:cornerRadius="5dp"
                android:textSize="17sp"
                android:id="@+id/saveMBt"
                android:text="@string/save"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>