<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productIV"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:contentDescription="@string/text"/>

        <TextView
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text"
            android:id="@+id/productNameTV"
            android:layout_marginVertical="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productSellPriceTV"
            android:text="@string/one_string_format"/>

        <TextView
            android:textSize="18sp"
            android:gravity="center"
            android:layout_height="45dp"
            android:id="@+id/addToCartTV"
            android:layout_marginTop="3dp"
            android:text="@string/add_to_cart"
            android:background="@color/orange"
            android:layout_width="match_parent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>