<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/orange"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productIV"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:text="@string/text"
            android:layout_marginTop="10dp"
            android:id="@+id/productNameTV"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/productIV"
            app:layout_constraintStart_toEndOf="@id/productIV"/>

        <TextView
            android:textSize="15sp"
            android:id="@+id/quantityTV"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_format"
            app:layout_constraintTop_toBottomOf="@id/productNameTV"
            app:layout_constraintStart_toStartOf="@id/productNameTV"/>

        <TextView
            android:textSize="15sp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/totalPriceTV"
            app:layout_constraintStart_toStartOf="@id/quantityTV"/>

        <TextView
            android:textSize="15sp"
            android:id="@+id/totalPriceTV"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_string_format"
            app:layout_constraintEnd_toEndOf="@id/productNameTV"
            app:layout_constraintTop_toBottomOf="@id/quantityTV"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>